@@ -68,6 +68,12 @@ struct VtxCurrentOffsetRef
     }
 };
 
+static void SentinelDrawCallback(const ImDrawList* parent_list, const ImDrawCmd* cmd)
+{
+    // This is a sentinel draw callback, it's only purpose is to mark draw list command.
+    IM_ASSERT(false && "This draw callback should never be called.");
+}
+
 } // namespace ImCanvasDetails
 
 // Returns a reference to _FringeScale extension to ImDrawList
@@ -429,7 +435,7 @@ void ImGuiEx::Canvas::EnterLocalSpace()
     //
     //     More investigation is needed. To get to the bottom of this.
     if ((!m_DrawList->CmdBuffer.empty() && m_DrawList->CmdBuffer.back().ElemCount > 0) || m_DrawList->_Splitter._Count > 1)
-        m_DrawList->AddDrawCmd();
+        m_DrawList->AddCallback(&ImCanvasDetails::SentinelDrawCallback, nullptr);
 
 # if IMGUI_EX_CANVAS_DEFERED()
     m_Ranges.resize(m_Ranges.Size + 1);
@@ -546,6 +552,10 @@ void ImGuiEx::Canvas::LeaveLocalSpace()
             command.ClipRect.w = command.ClipRect.w + m_ViewTransformPosition.y;
         }
     }
+
+    // Remove sentinel draw command if present
+    if (m_DrawListCommadBufferSize > 0 && m_DrawList->CmdBuffer.size() >= m_DrawListCommadBufferSize && m_DrawList->CmdBuffer[m_DrawListCommadBufferSize - 1].UserCallback == &ImCanvasDetails::SentinelDrawCallback)
+        m_DrawList->CmdBuffer.erase(m_DrawList->CmdBuffer.Data + m_DrawListCommadBufferSize - 1);
 
     auto& fringeScale = ImFringeScaleRef(m_DrawList);
     fringeScale = m_LastFringeScale;
